--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>  hello world </h1>
+<!DOCTYPE html>
+<html>
+<head>
+		<meta http-equiv="content-type" content = "text/html; charset = utf-8" />
+		<title>	袁毅</title>
+</head>
+<body>
+		我是通信领域软硬通吃的工程师，中文名字袁毅，英文名字Andrew，欢迎聊天。
+</body>
+</html>
+
